# kern

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE_REFACTOR_COMPLETE.md  BUILD_3DENGINE.ps1  BUILD_BINARY.md  BUILD_INSTRUCTIONS_FINAL.txt  BUILD_SIMPLE.bat  BUILD_STATUS.txt  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  COMPILATION_READY.txt  CONTRIBUTING.md  CREDITS.md  DIFFERENTIAL_TESTING_ADDED.md  Dockerfile  EXAMPLES_INDEX.md  FULL_PATH_COMMANDS.txt  FUZZ_TESTING_ADDED.md  G3D_API_DESIGN.md  G3D_PERFORMANCE_VALIDATION.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.txt  KERN_FEATURES_REFERENCE_TEMP.txt  LICENSE  Makefile  NAN_TAGGED_VALUE_DESIGN.md  OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PERFORMANCE_VALIDATION_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_PHASE2_COMPLETE.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_NOTES_v2.0.3.md  (+34 more)
3dengine/: README.md  kern.json
Kern-IDE/: README.md
boot/: README.md
build-3dengine/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Kern.sln  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  kargo.vcxproj  kargo.vcxproj.filters  kern-scan.vcxproj  kern-scan.vcxproj.filters  kern.vcxproj  kern.vcxproj.filters  kern_contract_humanize.vcxproj  kern_contract_humanize.vcxproj.filters  kern_core.vcxproj  kern_core.vcxproj.filters  kern_env_lib.vcxproj  kern_env_lib.vcxproj.filters  kern_game.vcxproj  kern_game.vcxproj.filters  kern_gfx.vcxproj  kern_gfx.vcxproj.filters  kern_launcher.vcxproj  kern_launcher.vcxproj.filters  kern_lsp.vcxproj  kern_lsp.vcxproj.filters  kern_repl.vcxproj  kern_repl.vcxproj.filters  kernc.vcxproj  kernc.vcxproj.filters
build-3dengine-new/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Kern.sln  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  kargo.vcxproj  kargo.vcxproj.filters  kern-scan.vcxproj  kern-scan.vcxproj.filters  kern.vcxproj  kern.vcxproj.filters  kern_contract_humanize.vcxproj  kern_contract_humanize.vcxproj.filters  kern_core.vcxproj  kern_core.vcxproj.filters  kern_env_lib.vcxproj  kern_env_lib.vcxproj.filters  kern_game.vcxproj  kern_game.vcxproj.filters  kern_gfx.vcxproj  kern_gfx.vcxproj.filters  kern_launcher.vcxproj  kern_launcher.vcxproj.filters  kern_lsp.vcxproj  kern_lsp.vcxproj.filters  kern_repl.vcxproj  kern_repl.vcxproj.filters  kernc.vcxproj  kernc.vcxproj.filters  version_info.rc
build-debug/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Kern.sln  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  doc_runtime_demo.vcxproj  doc_runtime_demo.vcxproj.filters  kargo.vcxproj  kargo.vcxproj.filters  kern-scan.vcxproj  kern-scan.vcxproj.filters  kern.vcxproj  kern.vcxproj.filters  kern_contract_humanize.vcxproj  kern_contract_humanize.vcxproj.filters  kern_core.vcxproj  kern_core.vcxproj.filters  kern_env_lib.vcxproj  kern_env_lib.vcxproj.filters  kern_game.vcxproj  kern_game.vcxproj.filters  kern_gfx.vcxproj  kern_gfx.vcxproj.filters  kern_launcher.vcxproj  kern_launcher.vcxproj.filters  kern_lsp.vcxproj  kern_lsp.vcxproj.filters  kern_repl.vcxproj  kern_repl.vcxproj.filters  kernc.vcxproj  kernc.vcxproj.filters  version_info.rc
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
build-linux-headless/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake
build-plan/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Kern.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  kargo.vcxproj  kargo.vcxproj.filters  kern-scan.vcxproj  kern-scan.vcxproj.filters  kern.vcxproj  kern.vcxproj.filters  kern_contract_humanize.vcxproj  kern_contract_humanize.vcxproj.filters  kern_core.vcxproj  kern_core.vcxproj.filters  kern_env_lib.vcxproj  kern_env_lib.vcxproj.filters  kern_launcher.vcxproj  kern_launcher.vcxproj.filters  kern_lsp.vcxproj  kern_lsp.vcxproj.filters  kern_repl.vcxproj  kern_repl.vcxproj.filters  kernc.vcxproj  kernc.vcxproj.filters
cmake/: kern_paths.cmake  kern_standalone_graphics.cmake
config/: feature_flags.json
docs/: ADOPTION_ROADMAP.md  ATTRIBUTION_POLICY.md  BUILTIN_REFERENCE.md  DEV_SCAN_ITERATIONS.md  ERROR_CODES.md  FEATURE_PLAN_20.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INTERNALS.md  INTERNALS_ARCHITECTURE.md  INTERNALS_COMPILER_AND_BYTECODE.md  INTERNALS_MODULES_AND_SECURITY.md  INTERNALS_VM.md  KERN_SCAN.md  LANGUAGE_ROADMAP.md  LANGUAGE_SYNTAX.md  MEMORY_MODEL.md  NESTED_KERN_TREE_REMOVED.md  NETWORKING_MULTIPLAYER.md  PRODUCTION_VISION.md  RELEASE_CHECKLIST.md  STANDALONE_COMPILE_ARCHITECTURE.md  STDLIB_STD_V1.md  STRESS_TESTS_PLAN.md  STRICT_TYPES.md  TESTING.md  TRADEMARK_POLICY.md  TROUBLESHOOTING.md  TRUST_MODEL.md  VNEXT_SYSTEM_ACCESS.md  architecture.md  examples.md  getting-started.md  index.md  kargo-guide.md  kern_evolution_from_stardefender.md  kern_language_evolution_plan.md  kern_lean_roadmap.md  language-guide.md
examples/: README.md  demo_ursina_style.kn  (+8 more)
kern-bootstrap/: Cargo.toml  README.md  build.rs
kern-bootstrap/scripts/: clean-user-kern-path.ps1
kern-bootstrap/src/: detect.rs  doctor.rs  download.rs  env_paths.rs  error.rs  extract.rs  github.rs  install.rs  layout.rs  lock.rs  log.rs  main.rs  nodejs.rs  path_inspect.rs  platform.rs  progress.rs  repair.rs  shell_hint.rs  state.rs  tree_copy.rs  uninstall.rs  versions_cmd.rs  win_toolchain.rs
kern-bootstrap/tests/: doctor_shadow_integration.rs
kern-portable-bootstrap/: Cargo.toml  build.rs
kern-portable-bootstrap/src/: artifact_cache.rs  doctor.rs  download.rs  error.rs  extract.rs  github.rs  install.rs  lib.rs  main.rs  node_embed.rs  paths.rs  sha256_verify.rs  tree_copy.rs
(+1478 files in other folders)
